--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.19",
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.4.5",
     "mongoose": "^8.3.3",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
